SS-005: Add new features to NotificationSettings functionality